# Vishnu

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  README.md
CMake/: FindEspinaCore.cmake  FindEspinaExtensions.cmake  FindQuaZip5.cmake
examples/: CMakeLists.txt  Vishnu-CreateAppsConfig.cpp  Vishnu-CreateUserPreferences.cpp  vishnu-CreateAppsConfig.cpp  vishnu-CreatePreferences.cpp  vishnu-CreateUserPreferences.cpp
vishnu/: AppProcess.cpp  AppProcess.h  Application.cpp  Application.h  Application.hpp  CMakeLists.txt  DataSet.cpp  DataSet.h  DataSetWindow.cpp  DataSetWindow.h  Definitions.hpp  Enums.hpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Process.cpp  Process.hpp  Property.cpp  Property.h  RegExpInputDialog.cpp  RegExpInputDialog.h  RegExpInputDialog.hpp  SyncGroup.cpp  SyncGroup.h  SyncGroup.hpp  UserDataSet.cpp  UserDataSet.h  UserDataSets.cpp  UserDataSets.h  WidgetsGroup.cpp  WidgetsGroup.h  WidgetsGroup.hpp  main.cpp  resources.qrc
vishnu/espinaExtensions/: ChannelReader.cpp  ChannelReader.h  ExtensionInformationDump.cpp  ExtensionInformationDump.h
vishnu/model/: Application.cpp  Application.h  AppsConfig.cpp  AppsConfig.h  Preferences.cpp  Preferences.h  UserDataSet.cpp  UserDataSet.h  UserDataSets.cpp  UserDataSets.h  UserPreferences.cpp  UserPreferences.h
vishnu/utils/: Auxiliars.hpp
vishnu/widgets/: DataSetListWidget.cpp  DataSetListWidget.h  DataSetWidget.cpp  DataSetWidget.h  DataSetWidget.hpp  PathsWidget.cpp  PathsWidget.h  PropertiesTableWidget.cpp  PropertiesTableWidget.h  PropertiesWidget.cpp  PropertiesWidget.h  PropertyWidget.cpp  PropertyWidget.h  UserDataSetListWidget.cpp  UserDataSetListWidget.h  UserDataSetWidget.cpp  UserDataSetWidget.h  ZEQGroupListWidget.cpp  ZEQGroupListWidget.h  ZEQGroupWidget.cpp  ZEQGroupWidget.h
